force-app/main/default/objects/Broker_Meeting_Tracker__c/Broker_Meeting_Tracker__c.object-meta.xml
<CustomObject>
    <label>Broker Meeting Tracker</label>
    <nameField>
        <displayFormat>BMT-{0000}</displayFormat>
        <label>Broker Meeting Tracker</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker Meeting Tracker</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>