force-app/main/default/objects/Broker_Meeting_Tracker__c/fields/Broker_Account__c.field-meta.xml
<CustomField>
    <fullName>Broker_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Broker Meeting Tracker</relationshipLabel>
    <relationshipName>Broker_Meeting_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>