force-app/main/default/objects/Broker_Meeting_Tracker__c/fields/Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Name__c</fullName>
    <label>Broker Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>