force-app/main/default/objects/Broker_Meeting_Tracker__c/fields/Channel_Head__c.field-meta.xml
<CustomField>
    <fullName>Channel_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Broker_Meeting_Tracker3</relationshipName>
    <type>Lookup</type>
</CustomField>