force-app/main/default/objects/Broker_Meeting_Tracker__c/fields/Channel_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Manager_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Manager Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Broker_Meeting_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>