force-app/main/default/objects/Broker_Meeting_Tracker__c/fields/If_Broker_Not_Registered_Choose_the_Brok__c.field-meta.xml
<CustomField>
    <fullName>If_Broker_Not_Registered_Choose_the_Brok__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>If Broker Not Registered Choose from BR</label>
    <referenceTo>Broker_Registration__c</referenceTo>
    <relationshipLabel>Broker Meeting Tracker</relationshipLabel>
    <relationshipName>Broker_Meeting_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>