force-app/main/default/objects/Broker_Meeting_Tracker__c/fields/Meeting_organized_by__c.field-meta.xml
<CustomField>
    <fullName>Meeting_organized_by__c</fullName>
    <label>Meeting organized by</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Channel Team Lead</fullName>
            </value>
            <value>
                <fullName>Sales Team</fullName>
            </value>
            <value>
                <fullName>Yourself</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>