force-app/main/default/objects/Broker_Meeting_Tracker__c/fields/Meeting_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Remarks__c</fullName>
    <label>Meeting Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>