force-app/main/default/objects/Broker_Meeting_Tracker__c/fields/No_of_Sales_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>No_of_Sales_Last_Year__c</fullName>
    <formula>If(Not(IsBlank(Channel_Partner__c)), Channel_Partner__r.No_of_Sales_In_Last_Year__c, SC_ID__r.No_of_Sales_In_Last_Yea__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of Sales Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>