force-app/main/default/objects/Broker_Meeting_Tracker__c/fields/No_of_Site_Visit_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>No_of_Site_Visit_Last_Year__c</fullName>
    <formula>If(Not(IsBlank(Channel_Partner__c)), Channel_Partner__r.Qualified_Sales_Value_Last_year__c, SC_ID__r.No_of_Sales_In_Last_Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of Site Visit Last Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>