force-app/main/default/objects/Broker_Meeting_Tracker__c/fields/No_of_Site_Visit_This_Month__c.field-meta.xml
<CustomField>
    <fullName>No_of_Site_Visit_This_Month__c</fullName>
    <formula>If(Not(IsBlank(Channel_Partner__c)), Channel_Partner__r.No_of_Site_Visit_this_month__c, SC_ID__r.No_of_Site_Visit_this_month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of Site Visit This Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>