force-app/main/default/objects/Broker_Meeting_Tracker__c/fields/No_of_Site_Visit_This_Year__c.field-meta.xml
<CustomField>
    <fullName>No_of_Site_Visit_This_Year__c</fullName>
    <formula>If(Not(IsBlank(Channel_Partner__c)), Channel_Partner__r.No_of_Site_Visits__c, SC_ID__r.Number_of_Site_Visits__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of Site Visit This Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>