force-app/main/default/objects/Broker_Meeting_Tracker__c/fields/Person_met__c.field-meta.xml
<CustomField>
    <fullName>Person_met__c</fullName>
    <label>Name of the Person met</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>