force-app/main/default/objects/Broker_Meeting_Tracker__c/fields/Plan_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Plan_of_Meeting__c</fullName>
    <label>Plan of Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Introduction</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Follow-Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>