force-app/main/default/objects/Broker_Meeting_Tracker__c/fields/SC_ID__c.field-meta.xml
<CustomField>
    <fullName>SC_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SC ID (Enter FULL NAME as per Passport)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sobha_Connect__c.Black_listed_user__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Sobha_Connect__c</referenceTo>
    <relationshipLabel>Broker Meeting Tracker</relationshipLabel>
    <relationshipName>Broker_Meeting_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>