force-app/main/default/objects/Broker_Meeting_Tracker__c/fields/SD_with_whom_the_meeting_happened__c.field-meta.xml
<CustomField>
    <fullName>SD_with_whom_the_meeting_happened__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SD with whom the meeting happened</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Broker_Meeting_Tracker2</relationshipName>
    <type>Lookup</type>
</CustomField>