force-app/main/default/objects/Broker_Meeting_Tracker__c/validationRules/Cannot_Edit_Future_Meeting_Tracker.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Future_Meeting_Tracker</fullName>
    <active>true</active>
    <errorConditionFormula>Meeting_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>You can only edit Past meeting trackers</errorMessage>
</ValidationRule>