force-app/main/default/objects/Broker_Meeting_Tracker__c/validationRules/Meeting_Date_can_not_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Meeting_Date_can_not_be_changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Not(IsNew()) , Ischanged(Meeting_Date__c))</errorConditionFormula>
    <errorDisplayField>Meeting_Date__c</errorDisplayField>
    <errorMessage>Meeting Date can not be changed</errorMessage>
</ValidationRule>