force-app/main/default/objects/Broker_Meeting_Tracker__c/validationRules/New_meetings_can_not_have_completed_stat.validationRule-meta.xml
<ValidationRule>
    <fullName>New_meetings_can_not_have_completed_stat</fullName>
    <active>true</active>
    <errorConditionFormula>And(IsNew(),isPickval(Meeting_Status__c , &apos;Completed&apos;))</errorConditionFormula>
    <errorMessage>Meeting status can not be selected as completed on meeting creation.</errorMessage>
</ValidationRule>