force-app/main/default/objects/Broker_Meeting_Tracker__c/validationRules/Time_Of_Meeting_can_not_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_Of_Meeting_can_not_be_changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Not(IsNew()) , Ischanged(Time_Of_Meeting__c))</errorConditionFormula>
    <errorDisplayField>Time_Of_Meeting__c</errorDisplayField>
    <errorMessage>Time Of Meeting can not be changed</errorMessage>
</ValidationRule>