force-app/main/default/objects/Broker_Meeting_Tracker__c/validationRules/Validate_Broker_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Broker_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR(SC_ID__r.Name__c =&apos;New_SC&apos;, SC_ID__r.Name__c =&apos;SC_ID_INPROCESS&apos;), Broker_Name__c=&apos;&apos; )</errorConditionFormula>
    <errorDisplayField>Broker_Name__c</errorDisplayField>
    <errorMessage>Broker Name is required if the SC ID is &apos;New_SC&apos; or &apos;CP_ID_INPROCESS&apos;</errorMessage>
</ValidationRule>