force-app/main/default/objects/Broker_Meeting_Tracker__c/validationRules/Validate_CP_SC_IDs.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_CP_SC_IDs</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(Channel_Partner__c=&apos;&apos;, SC_ID__c=&apos;&apos;, If_Broker_Not_Registered_Choose_the_Brok__c=&apos;&apos;),
AND(Channel_Partner__c!=&apos;&apos;, SC_ID__c!=&apos;&apos;), AND(Channel_Partner__c!=&apos;&apos;,If_Broker_Not_Registered_Choose_the_Brok__c!=&apos;&apos;),AND(SC_ID__c!=&apos;&apos;,If_Broker_Not_Registered_Choose_the_Brok__c!=&apos;&apos;)
)</errorConditionFormula>
    <errorMessage>Either the CP or SC ID field must be filled in; neither should not be empty.</errorMessage>
</ValidationRule>