force-app/main/default/objects/Broker_Meeting_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Meeting_Location__c</columns>
    <columns>Broker_Name__c</columns>
    <columns>Meeting_Date__c</columns>
    <columns>Meeting_Status__c</columns>
    <columns>Plan_of_Meeting__c</columns>
    <columns>Enter__c</columns>
    <columns>Meeting_Remarks__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Channel_Partner__c</columns>
    <columns>SC_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>